--- a/themes/zihengblog/layout/_partial/footer.ejs
+++ b/themes/zihengblog/layout/_partial/footer.ejs
@@ -99,8 +99,8 @@
 <!-- Bootstrap Core JavaScript -->
 <script type="text/javascript" src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<!-- Custom Theme JavaScript -->
-<%- js('js/hux-blog.min.js') %>
+<!-- Custom JavaScript -->
+<%- js('js/hux-blog.js') %>
 
 <!-- Async Load Function -->
 <script>
