--- a/themes/zihengblog/layout/_partial/head.ejs
+++ b/themes/zihengblog/layout/_partial/head.ejs
@@ -18,10 +18,10 @@
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <%- css('css/hux-blog.min.css') %>
+    <%- css('css/hux-blog.css') %>
 
     <!-- Custom Fonts -->
-    <!-- Hux change font-awesome CDN to qiniu -->
+    <!-- Hux change font-awesome CDN to Qiniu -->
     <link rel="stylesheet" type="text/css" href="https://cdn.staticfile.org/font-awesome/4.5.0/css/font-awesome.min.css" >
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
