--- a/themes/zihengblog/source/css/hux-blog.css
+++ b/themes/zihengblog/source/css/hux-blog.css
@@ -53,14 +53,19 @@ body {
      *     TypeIsBeautiful,
      *     [This Post](http://zhuanlan.zhihu.com/ibuick/20186806) etc.
      */
+/*
+    font-family: Optima,"Lucida Sans",Calibri,Candara,Arial,source-han-serif-sc,"Source Han Serif SC","Source Han Serif CN","Source Han Serif TC","Source Han Serif TW","Source Han Serif","Songti SC","Microsoft YaHei",sans-serif;
+    color: #343a40;
+    line-height: 1.6
+*/
   font-family: -apple-system, "Helvetica Neue", "Arial", "PingFang SC", "Hiragino Sans GB", "STHeiti", "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif;
-  line-height: 1.7;
+  line-height: 1.6;
   font-size: 16px;
   color: #404040;
   overflow-x: hidden;
 }
 p {
-  margin: 30px 0;
+  margin: 22px 0;
 }
 h1,
 h2,
@@ -73,8 +78,7 @@ h6 {
      *     [This Post](http://zhuanlan.zhihu.com/ibuick/20186806) etc.
      */
   font-family: -apple-system, "Helvetica Neue", "Arial", "PingFang SC", "Hiragino Sans GB", "STHeiti", "Microsoft YaHei", "Microsoft JhengHei", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "WenQuanYi Micro Hei", SimSun, sans-serif;
-  line-height: 1.7;
-  line-height: 1.1;
+  line-height: 1.6;
   font-weight: bold;
 }
 h4 {
@@ -95,10 +99,12 @@ article {
 /* overflow-x: hidden; */
 }
 blockquote {
-  color: #808080;
-  font-style: italic;
+/* font-style: italic; */
   font-size: 0.95em;
-  margin: 20px 0 20px;
+  margin: 1em 0 1em 0;
+  padding: 0 1em 0 1em;
+  color: #6a737d;
+  border-left: 0.3em solid #dfe2e5;
 }
 blockquote p {
   margin: 0;
@@ -142,20 +148,21 @@ pre {
   background-color: #f8f8f8 !important;
 }
 pre code {
+  /* avoid highlight.js */
+  border: none;
   display: block;
   width: auto;
   white-space: pre;
   word-wrap: normal;
-  /* avoid highlight.js */
-  border: none;
 }
 code {
   /* using custom code CSS style */
+  color: inherit;
   border: 1px solid #ddd;
   background: #f6f6f6;
   padding: 3px;
   border-radius: 3px;
-  font-size: 90%;
+  font-size: 0.9em;
 }
 .post-container a {
   color: #337ab7;
@@ -190,7 +197,7 @@ code {
 }
 .post-container ul,
 .post-container ol {
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
 }
 @media screen and (max-width: 768px) {
   .post-container ul,
